# GTK4-text-editer-on-binary-tree

./: .gitignore  CMakeLists.txt  Makefile  flake.nix
docs/: Build-Tree.mmd  limits.txt  tree-in-memory.txt  ТЗ.txt
src/: BinaryTreeFile.cpp  BinaryTreeFile.h  CMakeLists.txt  CustomTextView.cpp  CustomTextView.h  EditorWindow.cpp  EditorWindow.h  Tree.cpp  Tree.h  main.cpp
tests/: CMakeLists.txt  gen_file.cpp  test-gtk.cpp  test1.cpp  test2.cpp
